Added Connect Four.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./Grid/Tile.js"></script>
     <script src="./Grid/Grid.js"></script>
     <script src="./TicTacToe/TicTacToe.js"></script>
+    <script src="./Connect4/ConnectFour.js"></script>
     <script src="main.js"></script>
 
     
