--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
 
     <p>Connect Four</p>
-    <canvas id="mainCanvas"></canvas>
+    <canvas id="connectFourCanvas"></canvas>
+    <p>Tic Tac Toe</p>
+    <canvas id="ticTacToeCanvas"></canvas>
     <script src="./util/Vector2.js"></script>
     <script src="./MainCanvas/MainCanvas.js"></script>
     <script src="./Grid/Tile.js"></script>
